<resources>

    <!-- Player settings -->
    <string name="player_settings_toolbar_title">Player settings</string>
    <string name="player_settings_player_count_hint">Choose player count</string>
    <string name="player_settings_player_count_three" translatable="false">3</string>
    <string name="player_settings_player_count_four" translatable="false">4</string>
    <string name="player_settings_player_count_five" translatable="false">5</string>
    <string name="player_settings_player_count_six" translatable="false">6</string>
    <string name="player_settings_player_count_seven" translatable="false">7</string>
    <string name="player_settings_player_count_eight" translatable="false">8</string>
    <string name="player_settings_player_hint">Player %1$d</string>
    <string name="player_settings_button_proceed">Continue</string>

    <!-- Player order -->
    <string name="player_order_toolbar_title">Player order</string>
    <string name="player_order_hint">Choose player order</string>
    <string name="player_order_position" translatable="false">%1$d.</string>
    <string name="player_order_description">The first player will start to shuffle and deal the cards</string>


    <!-- Game rules -->
    <string name="game_rules_toolbar_title">Game rules</string>
    <string name="game_rules_card_count_title">How many rounds do you want to play?</string>
    <string name="game_rules_card_count_description">Remember that the game starts with one card and increases by one up to the highest card count and afterwards decreases again by one down to one card again. So if you select e.g. 10 cards, you\'ll play 20 rounds.</string>
    <string name="game_rules_cards_options_one_deck">One deck (up to %1$d cards based on %2$d players)</string>
    <string name="game_rules_cards_options_two_decks">Two decks (up to %1$d cards based on %2$d players)</string>
    <string name="game_rules_cards_options_individual">Individual count</string>
    <string name="game_rules_cards_options_individual_input_hint">Highest card count</string>


    <!-- Point rules -->
    <string name="point_rules_toolbar_title">Point rules</string>
    <string name="point_rules_title">Set up how many points you get</string>
    <string name="point_rules_description">for the fact that your prediction is correct and how many points in that case for each stitch as well as how many points you loose for each far from your prediction</string>
    <string name="point_rules_correct_prediction_hint">Correct prediction</string>
    <string name="point_rules_each_stitch_hint_positive">Points for each stitch</string>
    <string name="point_rules_each_stitch_hint_negative">Minuspoints for each stitch</string>
    <string name="point_rules_points_for_false_prediction_switch_text">Points even if prediction is not correct?</string>
    <string name="point_rules_points_for_false_prediction_switch_hint_positive">You get points for every stitch you made, but extra points if your prediction is correct</string>
    <string name="point_rules_points_for_false_prediction_switch_hint_negative">You only get points if your prediction is correct. If not, you get minus points</string>

</resources>
